# epd-spectra

./: Cargo.toml  Embed.toml  LICENSE.txt  README.md  memory.x
.cargo/: config.toml
.github/workflows/: rust.yml
examples/: convert_bmp.py  nucleo-f401re.rs  raspberry.rs
src/: driver.rs  graphics.rs  lib.rs
