[package]
name = "epd-spectra"
description = "Driver for Spectra EPDs from Pervasive Displays Inc"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/andber1/epd-spectra"

[dependencies]
embedded-graphics = "0.8.1"
embedded-graphics-core = "0.4.0"
embedded-hal = "1.0.0"

[dev-dependencies]
rppal = { version = "0.17", features = ["hal"] }
