[package]
name = "epd-spectra"
description = "Driver for Spectra EPDs from Pervasive Displays Inc"
keywords = ["embedded", "epaper", "display", "epd", "eink"]
categories = ["embedded", "no-std"]
version = "0.4.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/andber1/epd-spectra"

[dependencies]
embedded-graphics = "0.8.1"
embedded-graphics-core = "0.4.0"
embedded-hal = "1.0.0"
thiserror = {version = "1.0", optional = true}

[features]
std = ["dep:thiserror"]

[[example]]
name = "raspberry"
required-features = ["std"]

# Raspberry example
[target.'cfg(unix)'.dev-dependencies]
rppal = { version = "0.18", features = ["hal"]}

# STM32 Nucleo example
[target.thumbv7em-none-eabihf.dev-dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7"
nucleo-f401re = {git = "https://github.com/jkristell/nucleo-f401re"}
embedded-hal-bus = "0.1.0"
defmt = "0.3.6"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
cortex-m-rtic = "1"
dwt-systick-monotonic = "1.1.0"